# gOSPREY

./: CMakeLists.txt  README.md  index.html  params.json
dataFiles/: LovellRotamer_OH_HID.dat.global  all_amino94.in  all_nuc94_and_gr.in
doc/example/dhfr-ks-example/: DEE.cfg  KStar.cfg  MutSearch.cfg  System.cfg
doc/example/ppi/: DEE.cfg  KStar.cfg  top_confs
doc/example/ppi/sampleOut/: c_PDZexample  logDEE.out
doc/example/ppi_GPU/: KStar.cfg  System.cfg
native/: CMakeLists.txt  MSAStar.c  MSAStar.h  array.h  astar-cl.h  astar-cpu.c  astar-cpu.h  astar-cuda.cu  astar-cuda.h  astar.h  clwrapper.c  clwrapper.h  makefile  pq.h  qsort.h
native/additional/: Makefile  README  astar-opencl.c  astar-opencl.h  astar.cl
src/: AStarConfig.java  Amber96PolyPeptideResidue.java  Amber96ext.java  AminoAcidTemplates.java  Atom.java  BBMinimizer.java  Backbone.java  Backrub.java  BackrubMinimizer.java  Backrubs.java  BoundFlags.java  CommucObj.java  ConfPair.java  DEE.java  DEEGoldstein.java  DEEGoldsteinPairs.java  DEEGoldsteinTriples.java  DEEIndirect.java  DEESplit1f.java  DEESplit2f.java  EEF1.java  EnvironmentVars.java  ExpFunction.java  ExpansionQueue.java  ForceField.java  FullStructureSwitch.java  GenericResidueTemplates.java  KSParser.java  KStar.java  KSthread.java  LoopClosureAdjustment.java  MPItoThread.java  MSAStar.java  MSMinBounds.java  MinDEEIntervals.java  Molecule.java  MutationManager.java  OneMutation.java  PDBChemModel.java  PMinimizer.java  (+32 more)
src/mpi/: CartParms.java  Cartcomm.java  Comm.java  Datatype.java  Errhandler.java  Freeable.java  GraphParms.java  Graphcomm.java  Group.java  Intercomm.java  Intracomm.java  MPI.java  MPI.ve2  MPI.vep  MPI.vpj  MPIException.java  Makefile  Makefile.in  Op.java  Prequest.java  Request.java  ShiftParms.java  Status.java  User_function.java
